package es.ull.practica03.Strategy;

public class ChartAbstractFactory {

}
