package es.ull.practica04.TemplatePattern;

public interface IProblem {
}
